@@ -103,7 +103,7 @@ class HashLibTestCase(unittest.TestCase):
 
     def test_algorithms_guaranteed(self):
         self.assertEqual(hashlib.algorithms_guaranteed,
-            tuple(_algo for _algo in self.supported_hash_names
+            set(_algo for _algo in self.supported_hash_names
                   if _algo.islower()))
 
     def test_algorithms_available(self):
